--- a/package.json
+++ b/package.json
@@ -4,27 +4,33 @@
     "main": "src/index.js",
     "license": "MIT",
     "scripts": {
-        "build": "webpack -p",
-        "watch": "webpack --watch",
+        "build": "webpack",
+        "watch": "webpack serve --open",
         "dev": "webpack-dev-server"
     },
-    "dependencies": {
-        "axios": "^1.6.7",
-        "lua-fmt": "^2.6.0"
-    },
+    "dependencies": {},
     "devDependencies": {
-        "css-loader": "^5.2.4",
+        "@babel/core": "^7.23.9",
+        "@babel/preset-env": "^7.23.9",
+        "@babel/preset-typescript": "^7.23.3",
+        "axios": "^1.6.7",
+        "babel-loader": "^9.1.3",
+        "css-loader": "^6.10.0",
         "file-loader": "^6.2.0",
-        "html-webpack-plugin": "^4.3.0",
-        "monaco-editor": "^0.24.0",
-        "monaco-editor-webpack-plugin": "^3.1.0",
-        "prettier": "2.3.0",
-        "style-loader": "^2.0.0",
-        "ts-loader": "^7.0.5",
-        "typescript": "^4.2.4",
-        "webpack": "^4.43.0",
-        "webpack-cli": "^3.3.11",
-        "webpack-command": "^0.5.0",
-        "webpack-dev-server": "^3.11.0"
+        "html-webpack-plugin": "^5.6.0",
+        "json-loader": "^0.5.7",
+        "lua-fmt": "^2.6.0",
+        "monaco-editor": "^0.46.0",
+        "monaco-editor-webpack-plugin": "^7.1.0",
+        "path-browserify": "^1.0.1",
+        "prettier": "^3.2.5",
+        "speed-measure-webpack-plugin": "^1.5.0",
+        "style-loader": "^3.3.4",
+        "ts-loader": "^9.5.1",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.3.3",
+        "webpack": "^5.90.1",
+        "webpack-cli": "^5.1.4",
+        "webpack-dev-server": "^5.0.1"
     }
 }
