--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,5 +27,5 @@ jobs:
             - name: Deploy GitHub Pages
               uses: peaceiris/actions-gh-pages@v3
               with:
-                  github_token: ${{ secrets.GH_SECRET }}
+                  github_token: ${{ secrets.GITHUB_TOKEN }}
                   publish_dir: ./dist
